samples/_failures_safe/1761075514_d8fb5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bfc6b3e.c: In function ‘main’:
./samples/SAFE/__tmp_9bfc6b3e.c:153:12: error: missing terminating " character
  153 |     printf("\nMatrix Transpose
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9bfc6b3e.c:153:5: error: expected expression at end of input
  153 |     printf("\nMatrix Transpose
      |     ^~~~~~
./samples/SAFE/__tmp_9bfc6b3e.c:153:5: error: expected declaration or statement at end of input
